style.css
/*
Theme Name: Chuchadon
Theme URI: https://foxland.fi/downloads/chuchadon/
Author: Sami Keijonen
Author URI: https://foxland.fi/
Description: Chuchadon WordPress theme is made for sport clubs looking to use the SportsPress plugin. It’s also a perfect home for your fitness, health, or happiness blog.
Version: 1.0.6
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: chuchadon
Domain Path: /languages/
Tags: one-column, two-columns, left-sidebar, right-sidebar, accessibility-ready, custom-background, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready, blog, entertainment, news

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Chuchadon is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.

Normalizing styles have been helped along thanks to the fine work of
Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
*/

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
1.0 - Normalize
2.0 - Typography
3.0 - Elements
	3.1 - Blockquotes, paragraphs, code, lists, tables
    3.2 - Genericons
4.0 - Forms
5.0 - Navigation
	5.1 - Links
	5.2 - Menus
		5.2.1 - Primary menu
		5.2.2 - Search and Social menu
	5.3 - Comment and post navigation
6.0 - Accessibility
7.0 - Alignments
8.0 - Clearings
9.0 - Widgets
10.0 - Content
	10.1 - Posts and pages
	10.2 - Asides
11.0 - Infinite scroll
12.0 - Media
	12.1 - Captions
	12.2 - Galleries
13.0 - Layouts
	13.1 - Max-width
	13.2 - Paddings
	13.3 - Media queries
	13.4 - Sidebar layouts
14.0 - Comments
15.0 - Plugins
    15.1 - Jetpack CSS
	15.2 - SportPress CSS
16.0 - Right to left styles
17.0 - Child theme friendly zone
	17.1 - Font Family
	17.2 - Colors
	17.3 - Backgrounds
	17.4 - Borders
--------------------------------------------------------------*/


/*--------------------------------------------------------------
1.0 - Normalize
--------------------------------------------------------------*/

html {
	font-family: sans-serif;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust:     100%;
}

body {
	margin: 0;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
	display: block;
}

audio,
canvas,
progress,
video {
	display: inline-block;
	vertical-align: baseline;
}

audio:not([controls]) {
	display: none;
	height: 0;
}

[hidden],
template {
	display: none;
}

a {
	background-color: transparent;
}

a:focus {
	outline: thin dotted;
}
a:active,
a:hover {
	outline: 0;
}

abbr[title] {
	border-bottom: 1px dotted;
}

b,
strong {
	font-weight: bold;
}

dfn {
	font-style: italic;
}

h1 {
	font-size: 2em;
	margin: 0.67em 0;
}

mark {
	background: #ff0;
	color: #000;
}

small {
	font-size: 80%;
}

sub,
sup {
	font-size: 75%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}

sup {
	top: -0.5em;
}

sub {
	bottom: -0.25em;
}

img {
	border: 0;
}

svg:not(:root) {
	overflow: hidden;
}

figure {
	margin: 1em 40px;
}

hr {
	box-sizing: content-box;
	height: 0;
}

pre {
	overflow: auto;
}

code,
kbd,
pre,
samp {
	font-family: monospace, monospace;
	font-size: 1em;
}

button,
input,
optgroup,
select,
textarea {
	color: inherit;
	font: inherit;
	margin: 0;
}

button {
	overflow: visible;
}

button,
select {
	text-transform: none;
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
	-webkit-appearance: button;
	cursor: pointer;
}

button[disabled],
html input[disabled] {
	cursor: default;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

input {
	line-height: normal;
}

input[type="checkbox"],
input[type="radio"] {
	box-sizing: border-box;
	padding: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
	height: auto;
}

input[type="search"] {
	-webkit-appearance: textfield;
	/* box-sizing: content-box; */
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
	-webkit-appearance: none;
}

fieldset {
	border: 1px solid #c0c0c0;
	margin: 0 2px;
	padding: 0.35em 0.625em 0.75em;
}

legend {
	border: 0;
	padding: 0;
}

textarea {
	overflow: auto;
}

optgroup {
	font-weight: bold;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

td,
th {
	padding: 0;
}


/*--------------------------------------------------------------
2.0 Typography
--------------------------------------------------------------*/

body,
button,
input,
select,
textarea {
	font-size: 16px;
	font-size: 1rem;
	line-height: 1.5;
	word-wrap: break-word;
}

@media screen and (min-width: 1000px) {

	body,
	button,
	input,
	select,
	textarea {
		font-size: 18px;
		font-size: 1.125rem;
	}

}

@media screen and (min-width: 1400px) {

	body,
	button,
	input,
	select,
	textarea {
		font-size: 20px;
		font-size: 1.25rem;
	}

}

/* === 2.1 Headers === */

h1,
h2,
h3,
h4,
h5,
h6,
.site-title {
	clear: both;
	font-weight: 700;
	line-height: 1.3333333;
	margin: 0 0 3% 0;
}

h1,
.site-title {
	font-size: 32px;
}
h2 {
	font-size: 28px;
}
h3 {
	font-size: 24px;
}
h4 {
	font-size: 20px;
}
h5 {
	font-size: 18px;
}
h6 {
	font-size: 17px;
}

@media screen and (min-width: 600px) {

	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	.site-title {
		line-height: 1.2;
	}

	h1,
	.site-title {
		font-size: 38px;
	}
	h2 {
		font-size: 32px;
	}
	h3 {
		font-size: 28px;
	}
	h4 {
		font-size: 24px;
	}
	h5 {
		font-size: 20px;
	}
	h6 {
		font-size: 18px;
	}

}

.site-header,
.chuchadon-callout,
.chuchadon-callout > .entry-inner,
.chuchadon-callout-text,
.chuchadon-callout-link,
.sidebar-subsidiary,
.sidebar-subsidiary > .wrap > .wrap-inside {
	position: relative;
}
.site-header {
	text-align: center;
}
/* ... */

